--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Action Note</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/js/bootstrap.min.js">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -38,20 +38,21 @@
     </div>
   </nav>
   <!-- navbar END-->
+  <br>
+  <br>
   <!-- header -->
   <div id="header" class="jumbotron header-div">
-    <div class="container">
-      <center>
-        <h1>行動查核表</h1>
-        <p>每日行動量檢視表</p>
-      </center>
-
+    <div class="container text-center">
+      <h1>行動查核表</h1>
+      <p>每日行動量檢視表</p>
     </div>
   </div>
   <!-- header -->
   <!-- form -->
-  <div class="section_outer">
+  <!-- TODO: 左右兩邊留白，與@media 調整 -->
+  <div class="container section_outer">
     <!-- formform -->
+    <!-- 
     <ol id="demoListOL"></ol>
     <form id="demoForm">
       <input id="demoFormName" type="text" placeholder="Name ...">
@@ -59,10 +60,11 @@
       <input id="demoFormAge" type="number" placeholder="Age ...">
       <br>
       <button>Submit</button>
-    </form>
+    </form> 
+    -->
     <!-- formform END-->
     <form id="formsubmit">
-      <div>
+      <div class="">
         <label for="">填表人
           <select name="" id="user">
             <option value="1">高煜恆</option>
@@ -121,7 +123,7 @@
         </div>
       </section>
       <br>
-      <ol id="secARender"></ol>
+      <!-- <ol id="secARender"></ol> -->
       <!-- sectionA END -->
       <!-- sectionB -->
       <section>
@@ -298,7 +300,8 @@
       <!-- <button type="submit" id="action_submit">
         submit
       </button> -->
-      <input type="submit" value="submit">
+      <!-- TODO:為何沒有button bootstrap樣式？ -->
+      <input class="btn btn-primary" type="submit" value="submit">
     </form>
   </div>
   <!-- <textarea name="" id="textarea" cols="30" rows="10" placeholder="type in here"></textarea>
