--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- navbar -->
   <nav class="navbar navbar-dark bg-dark fixed-top">
     <div class="div_nav">
-      <div><a href="/">
+      <div><a href="./">
           <h3>行動查核表</h3>
         </a>
       </div>
